# PRO

./: .gitignore  README.md  docker-compose.yml  mcp_http_stdio_bridge.js  package-lock.json  package.json  players.sql
app/: globals.css  layout.tsx  page.tsx
app/@modal/: default.tsx
app/@modal/(.)players/new/: page.tsx
app/api/players/: route.ts
app/components/: PlayerRegistrationForm.tsx  PlayerRegistrationWindow.tsx  SideNav.tsx  TopBar.tsx  UndockedWindow.tsx
app/players/new/: page.tsx
go-api/: go.mod  main.go
lib/: db.ts
players-desktop/: index.html  package-lock.json  package.json  vite.config.ts
players-desktop/src/: App.css  App.tsx  env.ts  index.css
players-desktop/src-tauri/: Cargo.toml  tauri.conf.json
players-desktop/src-tauri/src/: main.rs
players-desktop/src/components/: Modal.tsx  PlayerRegistrationForm.tsx  SideNav.tsx  TopBar.tsx
